--- a/src/app/layout/image-editor/image-editor.component.html
+++ b/src/app/layout/image-editor/image-editor.component.html
@@ -26,17 +26,16 @@
         </button>
 
         <mat-card-content fxLayoutAlign="center center">
+            <mat-spinner *ngIf="loading$|async" strokeWidth="4" diameter="50"></mat-spinner>
 
-            <div>
-                <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" fxFlex
-                    [containWithinAspectRatio]="containWithinAspectRatio" [aspectRatio]="4 / 3" [resizeToWidth]="256"
-                    [cropperMinWidth]="128" [onlyScaleDown]="true" [roundCropper]="false"
-                    [canvasRotation]="canvasRotation" [transform]="transform" [alignImage]="'center'"
-                    [style.display]="showCropper ? null : 'none'" [format]="format" (imageLoaded)="imageLoaded($event)"
-                    (cropperReady)="cropperReady($event)" (loadImageFailed)="loadImageFailed()">
-                </image-cropper>
-                <!-- <img [src]="croppedImage" [style.border]="croppedImage ? '1px solid black' : 'none'" /> -->
-            </div>
+            <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true"
+                [containWithinAspectRatio]="containWithinAspectRatio" [aspectRatio]="4 / 3" [resizeToWidth]="256"
+                [cropperMinWidth]="128" [onlyScaleDown]="true" [roundCropper]="false" [canvasRotation]="canvasRotation"
+                [transform]="transform" [alignImage]="'center'" [style.display]="showCropper ? null : 'none'"
+                [format]="format" (imageLoaded)="imageLoaded($event)" (cropperReady)="cropperReady($event)"
+                (loadImageFailed)="loadImageFailed()">
+            </image-cropper>
+
 
         </mat-card-content>
 
