--- a/src/app/layout/upload/upload-camera/camera.component.html
+++ b/src/app/layout/upload/upload-camera/camera.component.html
@@ -5,26 +5,24 @@
             <button class="actionBtn" (click)="showNextWebcam(true)" [disabled]="!multipleWebcamsAvailable">Next
                 Toggle Camera</button>
             <button class="button" (click)="onOffWebCame()">On/Off camera</button>
-        </div> <br />
+        </div>
 
-        <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
-            *ngIf="showWebcam" [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
-            [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
-            (initError)="handleInitError($event)"></webcam>
+        <webcam [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
+            [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable" [videoOptions]="videoOptions"
+            (cameraSwitched)="cameraWasSwitched($event)" (initError)="handleInitError($event)"></webcam>
+
+        <div class="snapshot" *ngIf="pictureTaken|async as snapshot">
+            <h2>Nice one!</h2>
+            <img [src]="snapshot.imageAsDataUrl" />
+        </div>
     </div>
 
-    <div class="snapshot" *ngIf="pictureTaken|async as snapshot">
-        <h2>Nice one!</h2>
-        <img [src]="snapshot.imageAsDataUrl" />
-    </div>
-
-
-    <div *ngIf="errors.length > 0">
+    <!-- <div *ngIf="errors.length > 0">
         <h4>Error Messages:</h4>
         <ul *ngFor="let error of errors">
             <li>{{ error | json }}</li>
         </ul>
-    </div>
+    </div> -->
 </div>
 
 <ng-template #noCameraExist>
