--- a/src/app/layout/upload/upload-camera/camera.component.scss
+++ b/src/app/layout/upload/upload-camera/camera.component.scss
@@ -19,6 +19,19 @@
     max-height: 100%;
 }
 
+.info {
+    animation: blinker 4000ms cubic-bezier(0.35, 0, 0.25, 1) infinite;
+    margin-top: 1rem;
+}
+
+
+@keyframes blinker {
+    50% {
+        opacity: 0.2;
+
+    }
+}
+
 ul.links {
     padding-bottom: 10px;
 }
