--- a/src/app/layout/upload/upload-camera/camera.component.scss
+++ b/src/app/layout/upload/upload-camera/camera.component.scss
@@ -20,15 +20,22 @@
 }
 
 .info {
-    animation: blinker 4000ms cubic-bezier(0.35, 0, 0.25, 1) infinite;
+    animation: blinker 3000ms cubic-bezier(0.35, 0, 0.25, 1) infinite;
     margin-top: 1rem;
 }
 
 
 @keyframes blinker {
+    from {
+        opacity: 1.0;
+    }
+
     50% {
         opacity: 0.2;
+    }
 
+    to {
+        opacity: 1.0;
     }
 }
 
