--- a/src/app/layout/sidenav-content/sidenav-content.component.html
+++ b/src/app/layout/sidenav-content/sidenav-content.component.html
@@ -19,9 +19,9 @@
         <mat-icon mdListIcon>wallpaper</mat-icon>
         <span>{{ 'sidenav.image_editor' | translate }}</span>
     </a>
-    <a mat-list-item routerLinkActive="active" routerLink="/feeds">
-        <mat-icon mdListIcon>rss_feed</mat-icon>
-        <span>{{ 'sidenav.feeds' | translate }}</span>
+    <a mat-list-item routerLinkActive="active" routerLink="/camera">
+        <mat-icon mdListIcon>linked_camera</mat-icon>
+        <span>Cámara</span>
 
     </a>
     <mat-divider></mat-divider>
@@ -29,7 +29,7 @@
         <mat-icon mdListIcon>settings</mat-icon>
         <span>{{ 'sidenav.settings' | translate }}</span>
     </a>
-    <a mat-list-item routerLinkActive="active" routerLink="/faq">
+    <a mat-list-item routerLinkActive="active" routerLink="/help">
         <mat-icon mdListIcon>help</mat-icon>
         <span>{{ 'sidenav.help' | translate }}</span>
     </a>
