--- a/src/app/layout/upload/upload.component.html
+++ b/src/app/layout/upload/upload.component.html
@@ -37,7 +37,7 @@
                         </span>
                     </ng-template>
 
-                    <upload-camera></upload-camera>
+                    <!-- <upload-camera></upload-camera> -->
 
                 </mat-tab>
             </mat-tab-group>
