--- a/src/app/layout/upload/upload.component.html
+++ b/src/app/layout/upload/upload.component.html
@@ -1,48 +1,11 @@
 <app-default-toolbar></app-default-toolbar>
 
 <div fxLayoutAlign="center">
-    <mat-card fxLayout="column" fxFlex="100" fxFlex.sm="65" fxFlex.gt-sm="60">
 
-        <mat-card-header fxLayoutAlign="center center">
-            Cambiar imagen de perfil
-        </mat-card-header>
+    <section fxLayout="column" fxFlex="100" fxFlex.sm="65" fxFlex.gt-sm="60">
+        <upload-selector *ngIf="!(fus.file$|async)"></upload-selector>
+        <image-editor *ngIf="fus.file$|async"></image-editor>
+        <camera *ngIf="!(fus.file$|async)"></camera>
+    </section>
 
-        <mat-card-content>
-
-            <mat-tab-group animationDuration="0ms" mat-stretch-tabs>
-                <mat-tab>
-                    <ng-template mat-tab-label mat-tab-label-active>
-                        <span fxLayout="column" fxLayoutAlign="center center">
-                            <mat-icon class="example-tab-icon">laptop</mat-icon>
-                            <span>{{ 'upload.dialog.pc' | translate }}</span>
-                        </span>
-                    </ng-template>
-
-                    <upload-dropzone></upload-dropzone>
-
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <span fxLayout="column" fxLayoutAlign="center center">
-                            <mat-icon class="example-tab-icon">language</mat-icon>
-                            <span>URL</span>
-                        </span>
-                    </ng-template>
-                </mat-tab>
-                <mat-tab>
-                    <ng-template mat-tab-label>
-                        <span fxLayout="column" fxLayoutAlign="center center">
-                            <mat-icon class="example-tab-icon">linked_camera</mat-icon>
-                            <span>{{ 'upload.dialog.camera' | translate }}</span>
-                        </span>
-                    </ng-template>
-
-                    <!-- <upload-camera></upload-camera> -->
-
-                </mat-tab>
-            </mat-tab-group>
-
-        </mat-card-content>
-
-    </mat-card>
 </div>
